Obsługa znaku pustego w rejestracji